--- a/Madsee.HTML
+++ b/Madsee.HTML
@@ -16,11 +16,10 @@
 <a href="https://www.facebook.com/index.php/?lang=th/">เว็บเฟสบุ๊ค</a>
 <p>แอพพลิเคชั่นโปรดของฉัน <small>คือ</small> <i><u>spotift</u></p>
 <p>ฉันชอบนอนมากๆ </p>
-<p> <b>แต่ฉันต้องเรียน:</b>เลยนอนไม่ได้</p>
-<p> <u>วันนี้ไม่มีเรียนเลยนอนได้</u></p>
-<p> แต่ <mark>ฉันง่วงอยู่ดี</mark></p>
+<p> <b>แต่ฉันต้องเรียน:</b><u>เลยนอนไม่ได้</u></p>
+<p> <mark>วันนี้ไม่มีเรียนเลยนอนได้</mark></p>
+<p> <mark>แต่</mark> <u>ฉันง่วงอยู่ดี</u></p>
 <p> 11:07 <small>แต่ตอนนี้หิวอีกแล้ว</small></p>
 </body>
 </html>
-    <p>สูตรลับอาหาร: <sub>ผัดกระเพรา</sub>
-    <p>สูตรเครื่องดื่ม: โอริโอ้<sub>1แก้ว</sub>= 35฿</p>
+    
